--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "spell": "cspell \"**/*.{ts,tsx,js,jsx,md,json}\"",
     "spell:check": "cspell \"**/*.{ts,tsx,js,jsx,md,json}\" --no-progress",
     "spell:fix": "cspell \"**/*.{ts,tsx,js,jsx,md,json}\" --show-suggestions",
-    "clean:all": "rimraf .next out .open-next .wrangler",
-    "analyze": "ANALYZE=true npm run build",
+    "clean:all": "rimraf .next/* out/* .open-next/* .wrangler/*",
     "export": "next export",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -26,7 +25,7 @@
     "test:ui": "vitest --ui --api.host=0.0.0.0 --api.port=51204",
     "test:security": "node scripts/security-audit.js",
     "check": "npm run type-check && npm run format:check && npm run spell:check && npm run lint && npm run test && npm run test:security",
-    "prepreview": "rimraf .open-next .wrangler && npm run cf-typegen",
+    "prepreview": "rimraf .open-next/* .wrangler/* && npm run cf-typegen",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "bundle:analyze": "node scripts/analyze-bundle.js",
